# mira

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md  deny.toml  justfile  mira.toml  rust-toolchain.toml  skills.sh
.agents/skills/mira/: SKILL.md
.agents/skills/ship/: SKILL.md
.claude/hooks/: fix-git-identity.sh
.claude/skills/: mira
.github/: pull_request_template.md
.github/workflows/: ci.yml  cli-binaries.yml  publish.yml  release.yml
crates/mira-cli/: Cargo.toml  README.md
crates/mira-cli/src/: config.rs  doctor.rs  env.rs  experiment.rs  export.rs  main.rs
crates/mira-eval/: Cargo.toml  README.md
crates/mira-eval/examples/: cli_subject.rs  coding.rs  greet.rs
crates/mira-eval/src/: aggregate.rs  content.rs  dataset.rs  eval.rs  exec.rs  glob.rs  host.rs  lib.rs  model.rs  protocol.rs  registry.rs  report.rs  run.rs  runner.rs  scorer.rs  server.rs  session.rs  study.rs  subject.rs  target.rs  trajectory.rs
crates/mira-eval/tests/: cancel.rs  host_concurrency.rs  registration.rs  runner_scenarios.rs  scorer_parity.rs  trajectory_conformance.rs
crates/mira-everruns/: Cargo.toml  README.md
crates/mira-everruns/src/: lib.rs
crates/mira-everruns/tests/: llmsim.rs
crates/mira-judge/: Cargo.toml  README.md
crates/mira-judge/src/: lib.rs
crates/mira-macros/: Cargo.toml  README.md
crates/mira-macros/src/: lib.rs
crates/mira-publish-everruns/: Cargo.toml  README.md
crates/mira-publish-everruns/src/: lib.rs
crates/mira-schema-gen/: Cargo.toml
crates/mira-schema-gen/src/: lib.rs  main.rs
crates/mira-schema-gen/tests/: validate.rs
docs/: README.md  authoring.md  experiments.md  extensibility.md  getting-started.md  how-it-works.md  metrics.md  protocol.md  scorers.md  subjects.md
docs/features/: README.md  experiment-plans.md
examples/: Cargo.toml  README.md  coding.rs  greet.rs  infra.rs  interactive.rs  llm_judge.rs  multimodal.rs  swe_bench.rs  trials.rs
examples/cli_subject/: Cargo.toml  main.rs  subject.sh
examples/cli_subject/src/: main.rs
examples/coding/: Cargo.toml  main.rs
examples/coding/src/: main.rs
examples/greet/: Cargo.toml  main.rs
examples/greet-python/: README.md  study.py
examples/greet-typescript/: README.md  study.mjs
examples/greet/src/: main.rs
examples/infra/: Cargo.toml
examples/infra/src/: main.rs
examples/interactive/: Cargo.toml
examples/interactive/src/: main.rs
examples/llm_judge/: Cargo.toml
examples/llm_judge/src/: main.rs
examples/llmsim/: Cargo.toml  main.rs
examples/llmsim/src/: main.rs
examples/matrix/: Cargo.toml  main.rs
examples/matrix/src/: main.rs  support.rs
examples/metrics/: Cargo.toml  main.rs
examples/metrics/src/: main.rs  support.rs
examples/multimodal/: Cargo.toml
examples/multimodal/src/: main.rs
examples/src/: lib.rs
examples/swe_bench/: Cargo.toml  main.rs
examples/swe_bench/src/: main.rs
examples/trials/: Cargo.toml
examples/trials/src/: main.rs
schema/v1/: meta.json  schema.json
schema/v1/conformance/: scorers.json  trajectory.json
scripts/: cargo_publish_if_needed.sh  verify_crates_publish.py
sdks/python/: README.md  codegen.py  pyproject.toml
sdks/python/mira/: __init__.py  _codec.py  _meta.py  _serve.py  _wire.py  scorers.py  trajectory.py
sdks/python/tests/: test_conformance.py  test_meta.py  test_scorer_parity.py  test_serve.py  test_trajectory_conformance.py
sdks/typescript/: README.md  codegen.mjs  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: codec.ts  index.ts  meta.ts  scorers.ts  study.ts  trajectory.ts  wire.ts
sdks/typescript/tests/: conformance.test.mjs  meta.test.mjs  scorer-parity.test.mjs  serve.test.mjs  trajectory-conformance.test.mjs
skills/mira/: SKILL.md
skills/mira/references/: cookbook.md  experiments.md  scorers.md
specs/: SPEC.md  architecture.md  docs.md  release-process.md  sdks.md
src/: eval.rs  host.rs  lib.rs  protocol.rs  report.rs  runner.rs  scorer.rs  server.rs  subject.rs
