# Mira — a Rust-first, code-first evaluation framework for agents and tools.
# Part of the Everruns ecosystem. See specs/ for design decisions and docs/ for
# the public protocol reference.

[workspace]
resolver = "2"
# Each Rust example is its own self-contained crate under examples/<name>/.
# Polyglot examples (e.g. examples/greet-python/) are plain folders with no
# Cargo.toml — they aren't workspace members, so they're simply not listed here.
members = [
    "crates/*",
    "examples/greet",
    "examples/coding",
    "examples/cli_subject",
    "examples/metrics",
    "examples/matrix",
    "examples/trials",
    "examples/swe_bench",
    "examples/llmsim",
    "examples/llm_judge",
    "examples/infra",
    "examples/multimodal",
    "examples/interactive",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Mykhailo Chalyi <mike@chaliy.name>", "Everruns"]
repository = "https://github.com/everruns/mira"
homepage = "https://everruns.com"
documentation = "https://docs.rs/mira-eval"
keywords = ["eval", "agentic", "llm", "agent", "everruns"]
categories = ["development-tools::testing", "command-line-utilities"]

[workspace.dependencies]
# Core library, shared by the CLI and integration crates via path during
# development and by version once published.
mira-eval = { version = "0.2.0", path = "crates/mira-eval" }
# Proc-macro crate providing the `#[eval]` attribute (re-exported by mira-eval).
mira-macros = { version = "0.2.0", path = "crates/mira-macros" }
# everruns runtime adapter (used by the examples crate for the llmsim example).
mira-everruns = { version = "0.2.0", path = "crates/mira-everruns" }
# LLM-as-judge scorers backed by real providers (OpenAI, Anthropic).
mira-judge = { version = "0.2.0", path = "crates/mira-judge" }

# Async runtime. The core stays runtime-light (io + process); servers pull what
# they need.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "process", "fs", "sync", "time"] }
async-trait = "0.1"

# Serialization — the protocol and datasets are JSON.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# JSON Schema generation for the protocol wire types (optional `schema` feature
# only — kept out of the default build so the core stays dep-light).
schemars = "1"

# Scoring + CLI.
regex = "1"
clap = { version = "4", features = ["derive"] }
# Live progress bar for the host runner (TTY only; hidden in CI/non-TTY).
indicatif = "0.17"
# Host config file (mira.toml) parsing.
toml = "0.8"

# Distributed eval registration (the `register_eval!` macro / `#[eval]` attribute).
inventory = "0.3"

# Proc-macro toolchain (used by mira-macros).
syn = "2"
quote = "1"
proc-macro2 = "1"

# Integration crate: the published everruns runtime (optional, separate crate).
everruns-core = "0.15"
everruns-runtime = "0.15"

# HTTP client for provider-backed judge scorers (mira-judge). rustls keeps the
# build free of a system OpenSSL dependency; native-roots trusts the OS cert
# store so the judge also works behind TLS-intercepting corporate proxies.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Testing.
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
