[package]
name = "mira-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/mira-cli"
description = "The `mira` host CLI: run code-defined evals across a model matrix"
readme = "README.md"

# Installs as the `mira` binary even though the crates.io package is `mira-cli`.
# `doc = false`: the binary's docs would collide with the `mira` library's at
# target/doc/mira; the CLI is documented in its README and `--help`.
[[bin]]
name = "mira"
path = "src/main.rs"
doc = false

# cargo-binstall metadata. The crates.io package is `mira-cli` but the binary
# (and release tarballs) are named `mira`, with no version in the filename, so
# binstall's default URL/path heuristics won't match — pin them here.
# `cargo binstall mira-cli` fetches the prebuilt `mira` from the GitHub release.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ bin }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
mira-eval.workspace = true
mira-publish-everruns.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
indicatif.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
