[package]
name = "mira-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/mira-eval"
description = "A Rust-first, code-first evaluation framework for agents and tools"
readme = "README.md"

# The library is named `mira` so user code reads `use mira::...`, while the
# crates.io package is `mira-eval` (the `mira` name was already taken).
[lib]
name = "mira"
path = "src/lib.rs"

[features]
default = ["macros"]
# The `#[eval]` attribute, re-exported as `mira::eval`. Opt out for a leaner
# build (proc-macro deps) and use `register_eval!` instead.
macros = ["dep:mira-macros"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
regex.workspace = true
inventory.workspace = true
# CliSubject materializes seeded files in a fresh temp workdir per run.
tempfile.workspace = true
# Optional: the `#[eval]` attribute macro (enabled by the default `macros` feature).
mira-macros = { workspace = true, optional = true }
