[package]
name = "mira-judge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "LLM-as-judge scorers for Mira, backed by real providers (OpenAI Chat Completions, OpenAI Responses, and Anthropic Claude)."

[dependencies]
mira-eval = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
