[package]
name = "mira-publish-everruns"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/mira-publish-everruns"
description = "Publish Mira eval run results to an everruns instance, which hosts and visualizes external eval results"
readme = "README.md"

[dependencies]
mira-eval.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow = "1"

[dev-dependencies]
# `net` for the in-test mock HTTP server; `macros`/`rt` for `#[tokio::test]`.
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread"] }
