[package]
name = "mira-example-cli_subject"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mira example: evaluating an external program via CliSubject (polyglot subject)"
publish = false

[[bin]]
name = "cli_subject"
path = "src/main.rs"

[dependencies]
mira-eval.workspace = true
tokio.workspace = true
