[package]
name = "mira-example-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mira example: infrastructure errors (scored N/A, not failed; retryable)"
publish = false

[[bin]]
name = "infra"
path = "src/main.rs"

[dependencies]
mira-eval.workspace = true
tokio.workspace = true
