[package]
name = "mira-example-llm-judge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mira example: provider-backed LLM-as-judge scorers (mira-judge)"
publish = false

[[bin]]
name = "llm_judge"
path = "src/main.rs"

[dependencies]
mira-eval.workspace = true
mira-judge.workspace = true
tokio.workspace = true
