[package]
name = "mira-example-matrix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mira example: extra matrix axes beyond the model"
publish = false

[[bin]]
name = "matrix"
path = "src/main.rs"

[dependencies]
mira-eval.workspace = true
tokio.workspace = true
