[package]
name = "mira-example-swe_bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mira example: a SWE-bench-style eval skeleton"
publish = false

[[bin]]
name = "swe_bench"
path = "src/main.rs"

[dependencies]
mira-eval.workspace = true
tokio.workspace = true
