[package]
name = "mira-example-trials"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mira example: trials/repetitions + seed (pass@k, pass-rate, variance)"
publish = false

[[bin]]
name = "trials"
path = "src/main.rs"

[dependencies]
mira-eval.workspace = true
tokio.workspace = true
