[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mira-eval"
version = "0.4.0"
description = "Python SDK for authoring Mira eval studies (protocol over stdio, no Rust dependency)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Everruns" }]
keywords = ["eval", "evaluation", "llm", "agent", "mira"]
# Runtime is pure stdlib — a study runs anywhere `python3` does.
dependencies = []

[project.optional-dependencies]
# Dev-only: schema-conformance test + codegen + test runner.
dev = ["jsonschema>=4.0", "pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/everruns/mira"
Documentation = "https://github.com/everruns/mira/blob/main/docs/protocol.md"

[tool.hatch.build.targets.wheel]
packages = ["mira"]
